<resources>
    <string name="app_name">TheFriendsOfTheCity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="bookrack">书架</string>
    <string name="message">消息</string>

    <string name="uername">点击头像登录/用户名</string>
    <string name="qianming">签名</string>

    <string name="person">个人主页</string>
    <string name="colletion">我的收藏</string>
    <string name="friends">我的好友</string>
    <string name="close">附近的人</string>
    <string name="setting">账号管理</string>


</resources>
