<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_person"
            android:icon="@mipmap/nav_person"
            android:title="@string/person" />
        <item
            android:id="@+id/nav_colletion"
            android:icon="@mipmap/nav_colletion"
            android:title="@string/colletion" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_colse"
            android:icon="@mipmap/nav_colse"
            android:title="@string/close" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/setting_image"
            android:title="@string/setting" />
    </group>


    <item android:title="更多">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="发送" />
        </menu>
    </item>

</menu>
